--- a/NaoQt/Resources/AboutIcons8.html
+++ b/NaoQt/Resources/AboutIcons8.html
@@ -1,4 +1,5 @@
-/*
+<!DOCTYPE html>
+<!--
     This file is part of NaoQt.
 
     NaoQt is free software: you can redistribute it and/or modify
@@ -13,14 +14,10 @@
 
     You should have received a copy of the GNU Lesser General Public License
     along with NaoQt.  If not, see <https://www.gnu.org/licenses/>.
-*/
-
-#pragma once
-
-#include <map>
-
-static std::map<const char*, const char*> DefaultSettings({
-    { "plugins/plugins_directory", "./Plugins" },
-    { "filesystem/default_game", "NieRAutomata" },
-    { "filesystem/default_fallback", "C:/" }
-    });
+-->
+<html>
+    <body>
+        <h3>Icons by Icons8</h3>
+        <p>Website: <a href="https://icons8.com/icon">https://icons8.com/icon</a></p>
+    </body>
+</html>
