--- a/NaoQt/Resources/Aboutlibnao.html
+++ b/NaoQt/Resources/Aboutlibnao.html
@@ -16,11 +16,12 @@
     along with NaoQt.  If not, see <https://www.gnu.org/licenses/>.
 -->
 <html>
-    <body>
-        <h3>libnao %0</h3>
-        <p>Github: <a href="https://github.com/TypeA2/NaoQt">https://github.com/TypeA2/NaoQt</a></p>
-        <h4>Licensed under the GNU LGPLv3 or later:</h4>
-        <pre>
+
+<body>
+    <h3>libnao %0</h3>
+    <p>Github: <a href="https://github.com/TypeA2/Nao">https://github.com/TypeA2/NaoQt</a></p>
+    <h4>Licensed under the GNU LGPLv3 or later:</h4>
+    <pre>
 This file is part of libnao.
 
 libnao is free software: you can redistribute it and/or modify
@@ -36,5 +37,6 @@ GNU Lesser General Public License for more details.
 You should have received a copy of the GNU Lesser General Public License
 along with libnao.  If not, see <a href="https://www.gnu.org/licenses/">https://www.gnu.org/licenses/</a>.
         </pre>
-    </body>
+</body>
+
 </html>
